# Crypto-analytics-platform

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
airflow/: Dockerfile  README.md  requirements.txt
airflow/dags/: binance_klines_backfill.py  coingecko_snapshot.py  spark_bronze_to_silver_trades.py  spark_stream_trades_to_clickhouse.py  spark_stream_trades_to_iceberg.py
clickhouse/: README.md  init.sql
dbt/: README.md  dbt_project.yml  profiles.yml
dbt/models/marts/: fact_trades_1h.sql
dbt/models/staging/: sources.yml  stg_trades.sql
docs/adr/: 001-why-iceberg.md  002-why-clickhouse.md  003-why-lambda-not-kappa.md
grafana/dashboards/: trades_realtime.json
grafana/provisioning/dashboards/: dashboards.yml
grafana/provisioning/datasources/: datasources.yml
hive-metastore/: Dockerfile  README.md  entrypoint.sh  hive-site.xml
postgres/: init.sql
producers/binance_ws_producer/: Dockerfile  README.md  config.py  producer.py  requirements.txt  schema.py
scripts/: healthcheck.sh  smoke_test.sh
spark/: Dockerfile  README.md
spark/conf/: spark-defaults.conf
spark_jobs/: query_bronze.py
spark_jobs/batch/: bronze_to_silver_trades.py
spark_jobs/streaming/: trades_to_clickhouse.py  trades_to_iceberg.py
superset/: Dockerfile  superset_config.py
trino/: config.properties  jvm.config
trino/catalog/: iceberg.properties
