[project]
name = "crypto-analytics-platform"
version = "0.1.0"
description = "Real-time crypto analytics platform"
requires-python = ">=3.11"

[dependency-groups]
dev = [
    "ruff>=0.6.0",
    "black>=24.8.0",
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [".venv", "dbt/target", "airflow/logs"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "TCH"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra --strict-markers"
